--- a/style.css
+++ b/style.css
@@ -1,123 +1,253 @@
 *{
+
     margin: 0;
+
     padding: 0;
+
     font-family: 'Poppins', sans-serif;
+
     box-sizing: border-box;
+
 }
 
-body
+body img
+
 {
-    background-color: #8497ce;
+
+  width: 100vw;
+
+  height: 100vh;
+
 }
+
+
 
 .container
+
 {
-    width: 450px;
+
+    width: 550px;
+
     padding: 25px 35px;
+
     position: absolute;
+
     top: 50%;
-    left: 50%;
+
+    left: 40%;
+
     transform: translate(-50%,-50%);
+
     background: #ffffff;
+
     border-radius: 10px;
+
     display: flex;
+
     flex-direction: column;
+
     align-items: center;
+
 }
+
+
 
 .container p
+
 {
+
     font-weight: 600;
+
     font-size: 15px;
+
     margin-bottom: 8px;
+
     text-align: center;
+
 }
+
+
 
 .container input
+
 {
+
     width: 100%;
+
     height: 50px;
+
     border: 1px solid #bd3939;
+
     outline: 0;
+
     padding: 10px;
+
     margin: 10px 0 20px;
+
     border-radius: 5px;
+
 }
+
+
 
 .container button
+
 {
+
     width: 100%;
+
     height: 50px;
+
     background: #bd3939;
+
     color: #fff;
+
     border: 0;
+
     outline: 0;
+
     border-radius: 5px;
+
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+
     cursor: pointer;
+
     margin: 20px 0;
+
     font-weight: 500;
+
 }
+
+
 
 #qrcontaian
+
 {
+
     width: 300px;
+
     border-radius: 5px;
+
     max-height: 0;
+
     overflow: hidden;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+
     transition: max-height 3s;
+
 }
+
+
 
 #qrcontaian img{
-    width: 100%;
+
+    width: 200px;
+
+    height: 200px;
+
     padding: 10px;
+
 }
+
 #qrcontaian p{
+
   color: green;
+
 }
+
+
 
 #qrcontaian.show-img{
+
     max-height: 370px;
+
     margin: 10px auto;
+
     border: 1px solid #d1d1d1; 
+
 }
+
+
 
 .error
+
 {
+
     animation: shake 0.1s linear 10;
+
 }
 
+
+
 .footer {
+
    
+
     padding: 10px;
+
     text-align: center;
+
     font-size: 15px;
+
     color: #ffffff;
+
     position: fixed;
+
     bottom: 0;
+
     left: 50%;
+
     transform: translateX(-50%);
-  }
-  
-  .footer p {
-    margin: 0;
+
   }
 
+  
+
+  .footer p {
+
+    margin: 0;
+
+  }
+
+
+
 @keyframes shake
+
 {
+
     0%{
+
         transform: translateX(0);
+
     }
+
     25%{
+
         transform: translateX(-2px);
+
     }
+
     50%{
+
         transform: translateX(0);
+
     }
+
     75%{
+
         transform: translateX(2px);
+
     }
+
     100%{
+
         transform: translateX(0);
+
     }
+
 }
